bin/tests/errors_lexer/lexer/lex_err_leading_num_sep.swg
#global fileprivate

123._456 // swc-expected-error {{lex_err_leading_num_sep}}
